# rust-course-2025-09-18

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  TODO.md
day1/src/: main.rs
day2-solutions/src/: collections.rs  config.rs  error_handling.rs  generics.rs  iterators.rs  lib.rs  library_system.rs  main.rs  pattern_matching.rs  plugin_architecture.rs  traits.rs
day3_capstone/: Cargo.toml
day3_capstone/temp_async/: Cargo.toml
day3_capstone/temp_async/src/: lib.rs
day3_capstone/temp_core/: Cargo.toml
day3_capstone/temp_core/src/: lib.rs  mock.rs
day3_capstone/temp_embedded/: Cargo.toml
day3_capstone/temp_embedded/src/: lib.rs
day3_capstone/temp_esp32/: Cargo.toml  build.rs
day3_capstone/temp_esp32/.cargo/: config.toml
day3_capstone/temp_esp32/src/: main.rs
day3_capstone/temp_protocol/: Cargo.toml
day3_capstone/temp_protocol/src/: lib.rs
day3_capstone/temp_store/: Cargo.toml
day3_capstone/temp_store/src/: lib.rs
mdbook/book/: index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
mdbook/book/day1/: 01_setup.html  02_fundamentals.html  03_structs_enums.html  04_ownership.html  05_smart_pointers.html
mdbook/book/day2/: 06_collections.html  07_traits.html  08_generics.html  09_pattern_matching.html  10_error_handling.html  (+3 more)
mdbook/src/: SUMMARY.md
src/: SUMMARY.md  introduction.md
src/day1/: 02_fundamentals.md  03_structs_enums.md
src/day2/: 07_traits.md
src/day3/: 13_testing.md  16_file_io.md  17_no_std.md  18_build_deploy.md
src/transfer/: 20_memory_paradigm.md  21_null_safety.md  23_traits_vs_oop.md
(+38 files in other folders)
