[package]
name = "temp_embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.7"
temp_core = { path = "../temp_core", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
std = []
serde = ["dep:serde", "temp_core/serde"]
